@@ -1,3 +1,9 @@
+2003-05-07  Jeff Johnston  <jjohnstn@redhat.com>
+
+	* infrun.c (prev_pc): Move declaration ahead of proceed().
+	(proceed): Refresh prev_pc value before resuming.
+	(stop_stepping): Remove code to refresh prev_pc.
+
 2003-05-06  Kris Warkentin <kewarken@qnx.com>
 
 	* nto-tdep.c: Removed stray comment.
